name:                rob-elshire-citations
version:             0.1.0.0
license:             BSD3
author:              Finlay Thompson
maintainer:          finlay@dragonfly.co.nz
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable rob-elshire-citations
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , aeson
                     , bytestring
                     , cassava
                     , text
  default-language:    Haskell2010
