name:                s2-papers
version:             0.1.0.0
license:             BSD3
author:              Finlay Thompson
maintainer:          finlay@dragonfly.co.nz
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable s2-papers
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , aeson
                     , bytestring
                     , cassava
                     , text
  default-language:    Haskell2010
